[project]
name = "comfyui-myteamone"
description = "ComfyUI nodes for ByteDance Seedance 2.0 video generation via the MyteamOne API — text/image/video to video, plus multi-modal reference."
version = "0.3.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/YOUR_GH_USERNAME/ComfyUI-MyteamOne"

[tool.comfy]
# Set this to your Publisher ID once you register one at registry.comfy.org
PublisherId = "YOUR_PUBLISHER_ID"
DisplayName = "MyteamOne"
Icon = ""
