[project]
name = "comfyui-myteamone"
description = "ComfyUI nodes for ByteDance Seedance 2.0 video generation via the MyteamOne API — text/image/video to video, plus multi-modal reference."
version = "0.3.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository    = "https://github.com/agione-pro/ComfyUI-MyteamOne"
Documentation = "https://github.com/agione-pro/ComfyUI-MyteamOne#readme"
"Bug Tracker" = "https://github.com/agione-pro/ComfyUI-MyteamOne/issues"

[tool.comfy]
PublisherId = "myteamone"
DisplayName = "MyteamOne"
Icon        = "https://raw.githubusercontent.com/agione-pro/ComfyUI-MyteamOne/main/icon.png"
Tags        = ["VideoGeneration", "API", "Seedance", "ByteDance"]
SupportedComfyUIVersion = ">=1.0.0"
